Made the main view kannada responsive